
5.2a4 -> 5.2b1:
    - jbj: js: fix: global interpreter with contained object refcnts needs
	early cleanup in rpmcliFini(), not in rpmioClean().
    - jbj: rpmio: re-enable the memory leak warning with included explanation.
    - jbj: js: stub-in a rpmts class.
    - jbj: js: start js module for RPM objects.
    - jbj: js: wire up the File class.
    - jbj: js: replace NSPR with rpmio in the File class.
    - jbj: js: stub in the File class before ripping NSPR (SpiderMonkey).
    - jbj: js: add toy uuid.{generate,describe} object and methods.
    - jbj: js: add version/options/load methods (SpiderMonkey).
    - jbj: js: add an "environment" object (SpiderMonkey).
    - jbj: js: add a "arguments" array (SpiderMonkey).
    - jbj: js: add a print method (swiped from SpiderMonkey js shell).
    - rse: RPM_VENDOR_OPENPKG: stick with local RPM sanity checking for reasonable warning messages
    - jbj: js: simplify the embedding to the JSAPI examples, not the js shell.
    - jbj: ficl: capture stdout from ficl vm.
    - jbj: ficl: wire-up %post -p <ficl>.
    - jbj: ficl: wire-up %{ficl:...}. capturing stdout todo++ ...
    - jbj: ficl: add a FICL interpreter wrapper.
    - jbj: js: wire-up %post -p <js>. much more todo++.
    - jbj: js: wire-up %{js:...}. much more todo++.
    - jbj: js: stub-in a javascript interpreter wrapper.
    - jbj: tcl: load and use $argv and $argc.
    - jbj: tcl: fix: don't append multiple newlines.
    - jbj: perl: load and use @ARGV. Note that shell $1 ends up in perl $ARGV[0]
    - jbj: ruby: load and use ARGV. Note that shell $1 ends up in ruby ARGV[0].
    - jbj: python: load and use sys.argv.
    - jbj: ruby: finish converting to WITH_RUBYEMBED.
    - jbj: use poptParseArgvString, not argvSplit, for shell arg escaping.
    - jbj: rework the embedded interpreter API's preparing to handle args.
    - jbj: permit args in PHP like %{python a b c:...} syntax.
    - jbj: map NULL interp to lazily instantiated globally persistent instance.