@@ -1,5 +1,6 @@
 
 5.2a4 -> 5.2b1:
+    - jbj: yarn: convert rpmdbMatchIterator to usage mutex with refcounts.
     - jbj: js: fix: global interpreter with contained object refcnts needs
 	early cleanup in rpmcliFini(), not in rpmioClean().
     - jbj: rpmio: re-enable the memory leak warning with included explanation.
